IN DEVELOPMENT ======= 1.2.7

- added: definitions
- added: framework.async class
- added: framework.injectDefinition()
- added: framework.response501() and controller.view501() - 501 Not Implemented
- added: framework.redirect(oldHost, newHost, withPath, permament)
- added: new example https://github.com/petersirka/partial.js/tree/master/examples/redirect-host
- added: new example https://github.com/petersirka/partial.js/tree/master/examples/scheduler
- added: new example https://github.com/petersirka/partial.js/tree/master/examples/framework-async
- added: download content from URL in framework.fs.create...
- added: parse resource/configuration from a string - string.configuration()
- added: async.cancel()
- added: framework.on('websocket-begin')
- added: framework.on('websocket-end')
- added: controller.uri
- added: MailMessage.from() alias for MailMessage.sender()

- updated: default port: port || process.env.PORT || 8000
- updated: default framework.onMeta()
- updated: framework.init() - default IP is 127.0.0.1
- updated: controller.cancel() (added async.cancel)
- updated: utils.request() (added return Boolean)
- updated: utils.random(max, min)
- updated: completely rewritten utils.async()

- fixed: FrameworkFileSystem class
- fixed: view render
- fixed: FrameworkCache.fn()
- fixed: FrameworkCache.recycle()
- fixed: utils.reduce()
- fixed: utils.base64ToFile()
- fixed: @{canonical}, @{next}, @{prev}, @{prefetch}, @{prerender}

!!! IMPORTANT !!!

- renamed: websocket event websocket-connection -> websocket-beg
- renamed: controller.lastEventID -> contrlloler.sseID
- renamed: framework.inject() to framework.injectModule()
- renamed: framework.path.backup() -> framework.path.backups()
- renamed: controller.statusCode –> controller.status
- renamed: String.prototype.maxLength() -> String.prototype.max()

improvements
clean code

======= 1.2.6

- added: new options parameter - framework.run(http/https, debug, [port], [ip], [options])